; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..taskstask_image.c_task_image_process.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..taskstask_image.c_task_image_process.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nbio_image_handle = type { %struct.TYPE_2__, i32, i32, i32 }
%struct.TYPE_2__ = type { i32, i32, i32 }

@IMAGE_PROCESS_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nbio_image_handle*, i32*, i32*)* @task_image_process to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @task_image_process(%struct.nbio_image_handle* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.nbio_image_handle*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.nbio_image_handle* %0, %struct.nbio_image_handle** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load %struct.nbio_image_handle*, %struct.nbio_image_handle** %5, align 8
  %10 = getelementptr inbounds %struct.nbio_image_handle, %struct.nbio_image_handle* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.nbio_image_handle*, %struct.nbio_image_handle** %5, align 8
  %13 = getelementptr inbounds %struct.nbio_image_handle, %struct.nbio_image_handle* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @image_transfer_is_valid(i32 %11, i32 %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %3
  %18 = load i32, i32* @IMAGE_PROCESS_ERROR, align 4
  store i32 %18, i32* %4, align 4
  br label %52

19:                                               ; preds = %3
  %20 = load %struct.nbio_image_handle*, %struct.nbio_image_handle** %5, align 8
  %21 = getelementptr inbounds %struct.nbio_image_handle, %struct.nbio_image_handle* %20, i32 0, i32 3
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.nbio_image_handle*, %struct.nbio_image_handle** %5, align 8
  %24 = getelementptr inbounds %struct.nbio_image_handle, %struct.nbio_image_handle* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.nbio_image_handle*, %struct.nbio_image_handle** %5, align 8
  %27 = getelementptr inbounds %struct.nbio_image_handle, %struct.nbio_image_handle* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 2
  %29 = load %struct.nbio_image_handle*, %struct.nbio_image_handle** %5, align 8
  %30 = getelementptr inbounds %struct.nbio_image_handle, %struct.nbio_image_handle* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = load i32*, i32** %6, align 8
  %33 = load i32*, i32** %7, align 8
  %34 = call i32 @image_transfer_process(i32 %22, i32 %25, i32* %28, i32 %31, i32* %32, i32* %33)
  store i32 %34, i32* %8, align 4
  %35 = load i32, i32* %8, align 4
  %36 = load i32, i32* @IMAGE_PROCESS_ERROR, align 4
  %37 = icmp eq i32 %35, %36
  br i1 %37, label %38, label %40

38:                                               ; preds = %19
  %39 = load i32, i32* @IMAGE_PROCESS_ERROR, align 4
  store i32 %39, i32* %4, align 4
  br label %52

40:                                               ; preds = %19
  %41 = load i32*, i32** %6, align 8
  %42 = load i32, i32* %41, align 4
  %43 = load %struct.nbio_image_handle*, %struct.nbio_image_handle** %5, align 8
  %44 = getelementptr inbounds %struct.nbio_image_handle, %struct.nbio_image_handle* %43, i32 0, i32 0
  %45 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %44, i32 0, i32 0
  store i32 %42, i32* %45, align 4
  %46 = load i32*, i32** %7, align 8
  %47 = load i32, i32* %46, align 4
  %48 = load %struct.nbio_image_handle*, %struct.nbio_image_handle** %5, align 8
  %49 = getelementptr inbounds %struct.nbio_image_handle, %struct.nbio_image_handle* %48, i32 0, i32 0
  %50 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %49, i32 0, i32 1
  store i32 %47, i32* %50, align 4
  %51 = load i32, i32* %8, align 4
  store i32 %51, i32* %4, align 4
  br label %52

52:                                               ; preds = %40, %38, %17
  %53 = load i32, i32* %4, align 4
  ret i32 %53
}

declare dso_local i32 @image_transfer_is_valid(i32, i32) #1

declare dso_local i32 @image_transfer_process(i32, i32, i32*, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
